# score_the_grail

./: .gitignore  README.md  setup.cfg
runner/: console.py  data_encryption.py  gui.py  gui_to_executable.py  main.py
runner/flutter_gui/: __init__.py
runner/flutter_gui/models/: __init__.py  generic_callback.py  style.py
runner/flutter_gui/widgets/: __init__.py  map_and_gps.py  select_normalize_file.py
score_the_grail/: __init__.py
score_the_grail/data/: __init__.py  enums.py  file_io.py  kinematic.py  normative_crouchgait.txt.encrypted  normative_normal.csv.encrypted  normative_normal_std.csv.encrypted
