[metadata]
name = score_the_grail
description = A simple GUI application to compute walking score (MAP and GPS) using the GRAIL
long_description = file: README.md
long_description_content_type = text/markdown
author = Michaud, Benjamin, Pouliot, Annie
license_files = LICENSE
url = https://github.com/cr-crme/score_the_grail
version = attr: score_the_grail._version.__version__

[options]
python_requires = >=3.10
packages = find:
install_requires = 